[package]
name = "sleef"
edition = "2021"
version = "0.3.2"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Math functions for SIMD vectors"
keywords = ["simd", "libm", "math"]
repository = "https://github.com/burrbull/sleef-rs/"
documentation = "https://docs.rs/sleef"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies.doubled]
path = "../doubled-rs"
features = ["simd"]

[features]
default = []
enable_neon32 = []
enable_neon32vfpv4 = []
full_fp_rounding = []

[dev-dependencies]
rug = "1.16"

[dev-dependencies.rand]
version = "0.8.5"